--- a/BusTransportationModel/BusTransportationModel.csproj
+++ b/BusTransportationModel/BusTransportationModel.csproj
@@ -8,7 +8,30 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
+        <PackageReference Include="Serilog.Enrichers.CorrelationId" Version="3.0.1" />
+        <PackageReference Include="Serilog.Expressions" Version="5.0.1-dev-00182" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Properties\launchSettings.json" />
+      <None Include="bin\Debug\net8.0\BusTransportationModel.Service\BusTransportationModel.Service\Properties\launchSettings.json" />
+      <None Include="BusTransportationModel.Service\BusTransportationModel.Service\Properties\launchSettings.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="bin\Debug\net8.0\BusTransportationModel.Service\loC\SerilogConfigurator.cs" />
+      <Compile Include="bin\Debug\net8.0\BusTransportationModel.Service\loC\SwaggerConfigurator.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="bin\Debug\net8.0\Swashbuckle.AspNetCore.SwaggerGen.dll" />
+      <Content Include="bin\Debug\net8.0\Swashbuckle.AspNetCore.SwaggerUI.dll" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Properties\" />
     </ItemGroup>
 
 </Project>
