--- a/BusTransportationModel/BusTransportationModel.Service/appsettings.json
+++ b/BusTransportationModel/BusTransportationModel.Service/appsettings.json
@@ -1,5 +1,5 @@
 {
-
+  "BusModelDbContext" : "Data Source=localhost;Initial Catalog=BusTransModel;Integrated Security=SSPI;Trust Server Certificate=true;",
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
